--- a/_posts/2023-05-12-google-io-2023.md
+++ b/_posts/2023-05-12-google-io-2023.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Google I/O 2023: 
+title: Google I/O 2023 
 sub-title: A Look at the Biggest AI and Web Announcements
 excerpt: ""
 tags: [google, development, ai, confernce]
