Fixes spelling conference

--- a/_posts/2023-05-12-google-io-2023.md
+++ b/_posts/2023-05-12-google-io-2023.md
@@ -3,7 +3,7 @@ layout: post
 title: Google I/O 2023 
 sub-title: A Look at the Biggest AI and Web Announcements
 excerpt: ""
-tags: [google, development, ai, confernce]
+tags: [google, development, ai, conference]
 ---
 
 Google I/O is Google's annual developer conference, and it's always a big event for the company to show off its latest products and technologies. This year's conference had a number of major announcements that are sure to have a big impact on marketing and the web with deep integrations with AI coming to many of their products soon.
