Update blog post titles
Improve SEO and readability

--- a/_posts/2022-09-20-pycon-uk.md
+++ b/_posts/2022-09-20-pycon-uk.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Attending Pycon UK 2023
+title: PyCon UK 2022 - Three Days of Python Learning and Community
 sub-title: 3 days, loads of talks, plenty of value
 excerpt: "I had underestimated was the sheer amount of enthusiasm I would come back with. Spending time with many different people applying python to different problems and disciplines really shook up my viewpoint..."
 tags: [development, work, events]
