Updates categories and tags of posts
Includes minor changes to the titles to aid yaml parsing.

--- a/_posts/2022-09-20-pycon-uk.md
+++ b/_posts/2022-09-20-pycon-uk.md
@@ -3,7 +3,8 @@ layout: post
 title: PyCon UK 2022 - Three Days of Python Learning and Community
 sub-title: 3 days, loads of talks, plenty of value
 excerpt: "I had underestimated was the sheer amount of enthusiasm I would come back with. Spending time with many different people applying python to different problems and disciplines really shook up my viewpoint..."
-tags: [development, work, events]
+categories: [events]
+tags: [events, python, pycon, conference, development, community]
 ---
 I have been lucky enough to be able to attend PyCon UK 2022 along with some of my colleagues at Mod25 over the three days from September 16th to the 18th at Cardiff City Hall. It was a real privilege to be sent to the event, which I initially didn’t think we would get much value from due to the mix of topics, but I am very pleased to be proven wrong.
 
