--- a/_posts/2023-05-12-google-io-2023.md
+++ b/_posts/2023-05-12-google-io-2023.md
@@ -1,9 +1,10 @@
 ---
 layout: post
-title: Google I/O 2023: AI, PaLM2, and the Future of Search 
+title: "Google I/O 2023: AI, PaLM2, and the Future of Search" 
 sub-title: A Look at the Biggest AI and Web Announcements
 excerpt: ""
-tags: [google, development, ai, conference]
+categories: [events]
+tags: [events, google, google-io, ai, palm2, conference, development, search]
 ---
 
 Google I/O is Google's annual developer conference, and it's always a big event for the company to show off its latest products and technologies. This year's conference had a number of major announcements that are sure to have a big impact on marketing and the web with deep integrations with AI coming to many of their products soon.
